# foowrite

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
build.pico/: README
src/: btstack_config.h  common.h  cpplint.cfg  editor.cc  editor.h  editor_mode.h  layout.h  main.c  main.cc  output.hpp  screendiffer.cc  sdkconfig.h  setup.h
src/mac/: layout.c  local.cc
src/pico/: keyboard.c  keyboard.h  layout.c  pico_bt.c  queue.h  saving.cc
src/pico/badger/: badger.cc  splash.cc  splash.hpp
src/pico/display1/: display1.cc  splash.cc  splash.hpp
src/pico/gfx/: gfx.cc  splash.cc  splash.hpp
src/pico/unicorn/: unicorn.cc
tests/: README.md  editor_stubs.cc  editor_stubs.hpp  layout_map.h  test_basic_writing.cc  test_differ._cc  test_movements.cpp  test_text_objects.cc
